[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/MainManuUi/DeckMenu/DeckViewer/DeckViewerPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/MainManuUi/DeckMenu/DeckViewer/DeckEditor/DeckEditorPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/MainManuUi/DeckMenu/CardViewer/CardEditor/CardEditorPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/Custom_Fonts/cardLabel.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/MainManuUi/DeckMenu/CardEditorMenu.gd" type="Script" id=5]
[ext_resource path="res://UI/MainManuUi/DeckMenu/CardViewer/CardViewerPanel.tscn" type="PackedScene" id=6]

[node name="CardEditorMenu" type="Panel"]
margin_right = 1080.0
margin_bottom = 1920.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckViewerButton" type="Button" parent="."]
margin_left = 240.0
margin_top = 500.0
margin_right = 840.0
margin_bottom = 900.0
custom_fonts/font = ExtResource( 4 )
text = "View Decks"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardViewerButton" type="Button" parent="."]
margin_left = 240.0
margin_top = 1200.0
margin_right = 840.0
margin_bottom = 1600.0
custom_fonts/font = ExtResource( 4 )
text = "View Cards"

[node name="BackButton" type="Button" parent="."]
margin_right = 154.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 4 )
text = "B"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckViewerPanel" parent="." instance=ExtResource( 1 )]
visible = false

[node name="DeckEditorPanel" parent="." instance=ExtResource( 2 )]
visible = false

[node name="CardEditorPanel" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CardViewerPanel" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="pressed" from="DeckViewerButton" to="." method="view_decks_button"]
[connection signal="pressed" from="CardViewerButton" to="." method="view_cards_button"]
[connection signal="pressed" from="BackButton" to="." method="back_button"]
